--- a/Opdracht 2/views/partials/navigation.hbs
+++ b/Opdracht 2/views/partials/navigation.hbs
@@ -1,11 +1,8 @@
 <header>
       <nav class="main-navigation">
-       <a href="https://www.obajunior.nl">
-        <img id="logo" src="./images/logo/logo.66b1d35.png" alt="Oba Junior">
-      </a>
         <ul>
           <li><a href="/">Start</a></li>
-          <li><a href="/help">Mijn Werkstukken</a></li>
+          <li><a href="/help">Help</a></li>
         </ul>
       </nav>
       </header>
