--- a/Opdracht 2/views/layouts/endscreen.hbs
+++ b/Opdracht 2/views/layouts/endscreen.hbs
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -12,7 +13,8 @@
     {{> navigation}}
     <section id="installBanner" class="banner">
     <button id="installBtn">Install app</button>
-    {{> splash}}
+    {{> preview}}
+
 </section>
     {{> footer}}
   </div>
