fully ssr html5 application!

--- a/Opdracht 2/views/partials/preview.hbs
+++ b/Opdracht 2/views/partials/preview.hbs
@@ -1,6 +1,10 @@
 <section>
     <h1>Dit is jouw shirt!</h1>
-    <span>Jouw gekozen tekst:{{text}}</span>
-    <span>Jouw gekozen afbeelding: <img src="/images/{{image}}.png" alt="{{image}}"></span>
+    <p>Jouw gekozen tekst:{{text}}</p>
+    <p>Jouw gekozen afbeelding: <img src="/images/{{image}}.png" alt="{{image}}"></p>
     <img src="/images/{{color}}.png" alt="een {{color}} shirt">
+
+    <p>Sla onderstaande webadres op om jouw shirt in de toekomst te bekijken!</p>
+    <p>{{url}}
+    </p>
 </section>
