--- a/Opdracht 2/views/partials/head.hbs
+++ b/Opdracht 2/views/partials/head.hbs
@@ -5,9 +5,9 @@
     <meta name="theme-color" content="#f00">
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../stylesheets/main.css" />
+    <link rel="stylesheet" href="./stylesheets/reset.css" />
+    <link rel="stylesheet" href="./stylesheets/main.css" />
     <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" type="image/x-icon" href="/images/icons/favicon.ico">
 
     <link rel="icon" sizes="128x128" href="/images/icons/icon-128x128.png">
 <link rel="apple-touch-icon" sizes="128x128" href="/images/icons/icon-128x128.png">
