push for fb moment

--- a/Opdracht 2/views/layouts/instructions.hbs
+++ b/Opdracht 2/views/layouts/instructions.hbs
@@ -8,14 +8,13 @@
 {{> head}}
 
 <body>
+      {{> navigation}}
   <div id="app">
-    {{> navigation}}
-    <section id="installBanner" class="banner">
-    <button id="installBtn">Install app</button>
+{{> pwa}}
     {{> instructions}}
-</section>
-    {{> footer}}
   </div>
+    {{> footer}}
+
   <!--[if lt IE 7]>
       <p class="browsehappy">
         You are using an <strong>outdated</strong> browser. Please
