--- a/Opdracht 2/public/stylesheets/main.css
+++ b/Opdracht 2/public/stylesheets/main.css
@@ -1,3 +1,165 @@
-h2{
-    color: red;
+/* 
+#cc2a49
+#f99e4c
+#f36f38
+#ef4648
+#582841 */
+
+*{
+    font-family: 'Montserrat', sans-serif;
+}
+body{
+    background-color: #582841;
+    margin: 0;
+}
+
+#installBanner{
+    text-align: center;
+    background-color: white;
+    }
+    
+    #installBtn{
+        display: inline-block;
+        border: solid #582841 2px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px;
+        /* padding: 10%; */
+        padding-top: 10px;
+        padding-bottom: 10px;
+        width: 25%;
+        
+        background-color:#cc2a49;
+        color: white;
+    }
+
+#app{
+    max-width: 96%;
+    margin: auto;
+}
+
+header{
+    background-color: #cc2a49;
+    padding-bottom: 10px;
+    border-bottom: solid white 5px;
+    padding-top: 10px;
+
+}
+
+header nav ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+}
+
+header nav ul li{
+    display: inline-block;
+    border: solid white 2px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    /* padding: 10%; */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 25%;
+    background-color:#f99e4c;
+}
+
+a{
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+}
+
+section{
+    margin: auto;
+    padding: 1%;
+    margin-top: 5%;
+    width: 85%;
+    background-color: #f99e4c;
+    -webkit-border-radius: 10px;
+-moz-border-radius: 10px;
+border-radius: 10px;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.30);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.30);
+box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.30);
+}
+
+main{
+    color: white;
+}
+
+main h2{
+    font-size: 2em;
+    text-align: center;
+    text-decoration: underline;
+    font-family: 'Luckiest Guy', cursive;
+
+}
+
+main section ul{
+    width: 80%;
+    margin: auto;
+    list-style: none;
+    padding-inline-start: 0px;
+    padding-bottom: 1em;
+
+}
+
+main section ul li{
+    margin: auto;
+    margin-top: 0.5em;
+    list-style: none;
+    width: 50%;
+    font-size: 2em;
+    border: solid white 1px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    text-align: center;
+    background-color: #cc2a49;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+main section ul li a{
+margin: auto;
+}
+
+main section p{
+    width: 80%;
+    margin: auto;
+    font-size: 1.2em;
+    word-break: normal;
+    margin-bottom: 1em;
+}
+
+#applicationstart{
+    margin: auto;
+    margin-left: 30%;
+    display: inline-block;
+    border: solid #582841 2px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    /* padding: 10%; */
+    padding: 20px;
+    width: 30%;
+    
+    background-color:#cc2a49;
+    color: white;
+
+}
+
+
+footer{
+    background-color: #cc2a49;
+    margin-top: 20px;
+    border-top: solid white 5px;
+    padding-top: 10px;
+    height: 80px;
+    text-align: center;
+    width: 100%;
 }
