--- a/Opdracht 2/views/layouts/index.hbs
+++ b/Opdracht 2/views/layouts/index.hbs
@@ -8,14 +8,14 @@
 {{> head}}
 
 <body>
+      {{> navigation}}
   <div id="app">
-    {{> navigation}}
-    <section id="installBanner" class="banner">
-    <button id="installBtn">Install app</button>
+{{> pwa}}
     {{> splash}}
-</section>
-    {{> footer}}
+
+
   </div>
+      {{> footer}}
   <!--[if lt IE 7]>
       <p class="browsehappy">
         You are using an <strong>outdated</strong> browser. Please
