--- a/Opdracht 2/views/layouts/index.hbs
+++ b/Opdracht 2/views/layouts/index.hbs
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
 {{> head}}
 
 <body>
       {{> navigation}}
   <div id="app">
-{{> pwa}}
+    {{> modal}}
     {{> splash}}
+            <section id="fontcontroller">
+          <h6>Lettertype te klein?</h6>
+          <button type="button" onclick="smallerFont()">Normaal</button>
+          <button type="button" onclick="biggerFont()">Groter</button>
+        </section>
 
 
   </div>
