--- a/Opdracht 2/views/partials/instructions.hbs
+++ b/Opdracht 2/views/partials/instructions.hbs
@@ -2,11 +2,11 @@
 <section>
 <h2>Instructies</h2>
 <ul>
-<li><a href="#stap1">Een kleur kiezen</a></li>
-<li><a href="#stap2">Een plaatje kiezen</a></li>
-<li><a href="#stap3">Een tekst schrijven</a></li>
-<li><a href="#stap4">Ontwerp opslaan</a></li>
-<li><a href="#stap5">Ontwerp uitprinten</a></li>
+<li><a href="#stap1">1: Een kleur kiezen</a></li>
+<li><a href="#stap2">2: Een plaatje kiezen</a></li>
+<li><a href="#stap3">3: Een tekst schrijven</a></li>
+<li><a href="#stap4">4: Ontwerp opslaan</a></li>
+<li><a href="#stap5">5: Ontwerp uitprinten</a></li>
 </ul>
 </section>
 <section>
