--- a/Opdracht 2/public/stylesheets/main.css
+++ b/Opdracht 2/public/stylesheets/main.css
@@ -4,8 +4,13 @@
 #f36f38
 #ef4648
 #582841 */
-
+html{
+    transition: 2s linear;
+    scroll-behavior: smooth
+}
 *{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* Fallback to verdana if montserrat does not exist. */
     font-family: 'Montserrat', sans-serif;
 }
 body{
@@ -13,9 +18,13 @@ body{
     margin: 0;
 }
 
+h6{
+    color: #fff;
+}
+
 #installBanner{
     text-align: center;
-    background-color: white;
+    background-color: #fff;
     }
     
     #installBtn{
@@ -28,21 +37,28 @@ body{
         padding-top: 10px;
         padding-bottom: 10px;
         width: 25%;
-        
         background-color:#cc2a49;
-        color: white;
+        color: #fff;
     }
 
 #app{
     max-width: 96%;
     margin: auto;
+    padding-top: 5em;
 }
 
 header{
     background-color: #cc2a49;
     padding-bottom: 10px;
-    border-bottom: solid white 5px;
+    border-bottom: solid #fff 5px;
     padding-top: 10px;
+    -webkit-box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.30);
+    -moz-box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.30);
+    box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.30);
+    position: fixed;
+    top:0;
+    width: 100%;
+    z-index: 1;
 
 }
 
@@ -56,7 +72,7 @@ header nav ul{
 
 header nav ul li{
     display: inline-block;
-    border: solid white 2px;
+    border: solid #fff 2px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
@@ -69,11 +85,12 @@ header nav ul li{
 
 a{
     font-size: 16px;
-    color: white;
+    color: #FFF;
     text-decoration: none;
 }
 
 section{
+    text-align: center;
     margin: auto;
     padding: 1%;
     margin-top: 5%;
@@ -88,7 +105,7 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.30);
 }
 
 main{
-    color: white;
+    color: #fff;
 }
 
 main h2{
@@ -114,8 +131,22 @@ main section ul li{
     list-style: none;
     width: 50%;
     font-size: 2em;
-    border: solid white 1px;
-    padding-top: 0.5em;
+    border: solid #FFF 4px;
+    padding-bottom: 0.5em;
+    text-align: center;
+    background-color: #cc2a49;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+main section ul li:hover{
+    margin: auto;
+    margin-top: 0.5em;
+    list-style: none;
+    width: 50%;
+    font-size: 2em;
+    border: solid #FFF 4px;
     padding-bottom: 0.5em;
     text-align: center;
     background-color: #cc2a49;
@@ -138,7 +169,6 @@ main section p{
 
 #applicationstart{
     margin: auto;
-    margin-left: 30%;
     display: inline-block;
     border: solid #582841 2px;
     -webkit-border-radius: 10px;
@@ -149,7 +179,7 @@ main section p{
     width: 30%;
     
     background-color:#cc2a49;
-    color: white;
+    color: #fff;
 
 }
 
@@ -157,9 +187,220 @@ main section p{
 footer{
     background-color: #cc2a49;
     margin-top: 20px;
-    border-top: solid white 5px;
+    border-top: solid #fff 5px;
     padding-top: 10px;
     height: 80px;
     text-align: center;
     width: 100%;
 }
+
+/* Form */
+input{
+    width: 100%;
+    padding:1em 1.5em;
+    margin:0.5em 0;
+    box-sizing: border-box; 
+}
+
+input[type=text] {
+    border: 2px solid gray;
+    border-radius: 4px;
+}
+
+button[type=submit]{
+    display: inline-block;
+    border: solid #fff 2px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    /* padding: 10%; */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 25%;
+    background-color:#f99e4c;
+    color: #fff;
+
+}
+
+button[type=reset]{
+    display: inline-block;
+    border: solid #fff 2px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    /* padding: 10%; */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 25%;
+    background-color:#f99e4c;
+    color: #fff;
+}
+
+select{
+    width: 100%;
+    font-size: 1em;
+    background-color: #cc2a49;
+    color: #fff;
+}
+
+legend{
+    color: #fff;
+}
+
+fieldset{
+    border: none;
+}
+
+label{
+    color: #fff;
+    text-decoration: underline;
+}
+
+form{
+    padding: 1em;
+}
+
+form input, select, button{
+    margin: 1em;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+button{
+    display: inline-block;
+    border: solid #582841 2px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    /* padding: 10%; */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 25%;
+    background-color:#cc2a49;
+    color: #fff;
+}
+
+button:hover{
+    transition: 0.5s;
+    background-color:#582841 ;
+    color: #fff;
+    border: #fff solid 2px;
+}
+
+li:hover{
+    transition: 0.5s;
+    background-color:#cc2a49;
+    color: #f99e4c;
+    border: #fff solid 2px;
+}
+
+
+figure{
+    position: relative;
+    display: block;
+    text-align: center;
+}
+
+
+figure img{
+text-align: center;
+vertical-align: middle;
+height: 100%;
+margin: auto;
+}
+
+
+
+#mockup{
+ position: absolute;
+ text-align: center;
+ width: 100%;
+ margin: auto;
+}
+
+
+#mockup span{
+    display: block;
+}
+
+
+#fontcontroller{
+    display: none;
+}
+
+
+
+  /* Modal Box */ 
+  /* https://www.w3schools.com/howto/howto_css_modals.asp */
+  /* The Modal (background) */
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #fff;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #c03b3b;
+    color: #fff;
+  }
+  
+  .modal-body {padding: 2px 16px;}
+  
+  .modal-footer {
+    padding: 2px 16px;
+    background-color: #c03b3b;
+    color: #fff;
+  }
